--- a/canvas/index.html
+++ b/canvas/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>app</title>
+  
   <link rel="stylesheet" href="style.css"> 
+
 </head>
 <body>
-  <!-- <div id="container"></div> -->
+
+  <div id="container"></div>
+  <div id="container2"></div>
+
   <script type="module" src="app.js"></script>
 </body>
 </html>
