prepare tool modules

--- a/canvas/index.html
+++ b/canvas/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>app</title>
-  
+
   <link rel="stylesheet" href="style.css"> 
 
 </head>
 <body>
 
-  <div id="container"></div>
-  <div id="container2"></div>
+  <div id="box1" class="box"><p class="text"> box 1 </p></div>
+  <div id="box2" class="box"><p class="text"> box 2 </p></div>
 
   <script type="module" src="app.js"></script>
 </body>
