--- a/03_conver_text_to_stroke/index.html
+++ b/03_conver_text_to_stroke/index.html
@@ -5,15 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>app</title>
-
+  
   <link rel="stylesheet" href="style.css"> 
 
 </head>
 <body>
 
-  <div id="box1">box1</div>
-  <div id="box2">box2</div>
-
-  <script type="module" src="app.js"></script>
+  <script type="module" src="modules/app.js"></script>
 </body>
 </html>
